--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ipartek.formacion</groupId>
-	<artifactId>uf2218</artifactId>  
+	<artifactId>proyectoRest</artifactId>  
 	<packaging>war</packaging>
 	<version>0.0.1</version>
-	<name>uf2218</name>
+	<name>proyectoRest</name>
 
 
 	<!-- variables comunes para todo el POM -->
@@ -115,6 +115,6 @@
 		</plugins>
 
 
-		<finalName>uf2218</finalName>
+		<finalName>proyectoRest</finalName>
 	</build>
 </project>
